[workspace]
resolver = "2"
members = [
    "axum-config",
    "thisconfig",
    "thisconfig-macros",
    "examples",
]

[workspace.dependencies]
thisconfig = { path = "thisconfig" }
thisconfig-macros = { path = "thisconfig-macros" }

axum-config = { path = "axum-config" }

tracing = { version = "0.1.44" }
serde = { version = "1.0.228", features = ["derive"] }

tokio = { version = "1.0", features = ["full"] }
