[workspace]
resolver = "2"
members = [
    "axum-config",
    "thisconfig",
    "thisconfig-macros",
    "examples",
]

[workspace.dependencies]
thisconfig = { path = "thisconfig", version = "0.2.2" }
thisconfig-macros = { path = "thisconfig-macros", version = "0.2.2" }
axum-config = { path = "axum-config", version = "0.2.2" }

tracing = { version = "0.1.44" }
serde = { version = "1.0.228", features = ["derive"] }
