[package]
name = "axum-config-macros"
version = "0.1.0"
edition = "2024"
authors = ["Luciano Revillod <lrevillod2022@alu.uct.cl>"]
license = "MIT"
description = "Proc macros for axum-config"
repository = "https://github.com/MrRevillod/axum-config"
keywords = ["axum", "config"]
categories = ["config"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
