[package]
name = "axum-config"
version = "0.2.0"
edition = "2024"
authors = ["Luciano Revillod <lrevillod2022@alu.uct.cl>"]
license = "MIT"
readme = "./README.md"
description = "Config Loader for Axum Applications"
repository = "https://github.com/MrRevillod/axum-config/tree/main/axum-config"
keywords = ["axum", "config", "toml", "environment"]
categories = ["config", "web-programming"]

[features]
validation = ["thisconfig/validation", "validator/derive"]

[dependencies]
axum = "0.8.8"
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thisconfig = { workspace = true, features = ["axum"] }
validator = { version = "0.20.0", features = ["derive"], optional = true }
