[package]
name = "examples"
version = "0.1.0"
edition = "2024"

[[example]]
name = "basic"
path = "basic.rs"

[[example]]
name = "axum"
path = "axum.rs"

[[example]]
name = "validation"
path = "validation.rs"

[[example]]
name = "env_vars"
path = "env_vars.rs"

[[example]]
name = "units"
path = "units.rs"

[dependencies]
axum = "0.8.8"
serde = { workspace = true, features = ["derive"] }
thisconfig = { workspace = true, features = ["validation", "dotenv"] }
axum-config = { workspace = true, features = ["byte-unit", "time-unit"] }
validator = { version = "0.20.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
