[package]
name = "thisconfig-macros"
version = "0.1.0"
edition = "2024"
authors = ["Luciano Revillod <lrevillod2022@alu.uct.cl>"]
readme = "../README.md"
license = "MIT"
description = "Proc macros for thisconfig crate"
repository = "https://github.com/MrRevillod/thisconfig"
keywords = ["axum", "config"]
categories = ["config"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
