[package]
name = "thisconfig"
version = "0.2.0"
edition = "2024"
authors = ["Luciano Revillod <lrevillod2022@alu.uct.cl>"]
license = "MIT"
readme = "../README.md"
description = "Config Loader for Rust Applications"
repository = "https://github.com/MrRevillod/thisconfig"
keywords = ["config", "toml", "environment"]
categories = ["config", "web-programming"]

[features]
validation = ["validator/derive"]

[dependencies]
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }

regex-lite = "0.1.8"
thiserror = "2.0.17"
toml = "0.9.10"
validator = { version = "0.20.0", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }
tempfile = "3.14"
