[package]
name = "thisconfig"
version = "0.2.1"
edition = "2024"
authors = ["Luciano Revillod <lrevillod2022@alu.uct.cl>"]
license = "MIT"
readme = "../README.md"
description = "Config Loader for Rust Applications"
repository = "https://github.com/MrRevillod/thisconfig"
keywords = ["config", "toml", "environment"]
categories = ["config", "web-programming"]

[features]
time-unit = ["dep:duration-str"]
byte-unit = ["dep:byte-unit"]
axum = ["thisconfig-macros/axum"]
validation = ["validator/derive"]
dotenv = ["dep:dotenv"]

[dependencies]
thisconfig-macros = { workspace = true }

tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }

regex-lite = "0.1.8"
thiserror = "2.0.17"
toml = "0.9.10"
validator = { version = "0.20.0", features = ["derive"], optional = true }

byte-unit = { version = "5.2.0", optional = true }
duration-str = { version = "0.20.0", optional = true }
dotenv = { version = "0.15.0", optional = true }

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }
tempfile = "3.14"
